# xai-mcp-server

./: .faf  .faf-dna  CLAUDE.md  Cargo.toml  README.md  demo-mcp.sh  package.json  project.faf
src/: main.rs
svelte-ui/: .gitignore  .vercel-trigger  CLAUDE.md  DEPLOYMENT-COMPLETE.md  EMAIL-SETUP.md  FAF-BRAND-STYLE-GUIDE.md  FAFLOGO-USAGE.md  FAF_SPECIFICATION_V1.md  FORMSPREE-SETUP.md  GITHUB-DISCUSSIONS-SETUP.md  HISTORIC-VALIDATION-2025-09-22.md  MCP-DOCS-HUB-VISION.md  PRICING-TABLE.md  RESEND-SETUP.md  SITE-CHECKLIST.md  SPA-ROUTING-FIX.md  STRIPE-FIX.md  STRIPE-SETUP.md  SUPABASE-SETUP.md  TURBO-DEPLOYMENT-GUIDE.md  TURBO-STRATEGY.md  package-lock.json  package.json  svelte.config.js  vercel.json
svelte-ui/src/: app.css  app.html
svelte-ui/src/lib/: license-generator.ts  license-store-json-backup.ts  license-store-supabase.ts  supabase.ts  theme-store.ts
svelte-ui/src/lib/components/: AIAutomation.svelte  CheckoutButton.svelte  ContactModal.svelte  CustomerPortal.svelte  DownloadCounter.svelte  EmailCapture.svelte  FafLogo.svelte  Footer.svelte  Hero.svelte  Journey.svelte  JustShipped.svelte  LiveDemo.svelte  N8nPainPoints.svelte  Navigation.svelte  Onboarding.svelte  Pricing.svelte  ScrollRevealText.svelte  SideNav.svelte  TheNewStandard.svelte  TrustVsHope.svelte  TypewriterText.svelte  WolfejamGizmo.svelte
svelte-ui/src/routes/: +error.svelte  +layout.svelte  +page.svelte
svelte-ui/static/: faf-hero-sequence.html  press-release-print.html  press-release.html  robots.txt  sitemap.xml
wjttc/: WJTTC-TESTING-CENTER.md  eval-weights.py  run-all.sh
(+53 files in other folders)
