[package]
name = "xai-faf-core"
version = "0.4.1"
edition = "2021"
authors = ["wolfejam <wolfejam@faf.one>"]
description = "The Crown: Rust MCP engine for FAF"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "xai-faf-core"
path = "src/main.rs"
